--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="row align-items-center " id="hom">
           <div class="col-md-5 mar-top">
-              <img src="https://media-exp1.licdn.com/dms/image/C5603AQHHrPtkwM5y9g/profile-displayphoto-shrink_200_200/0/1635411479662?e=1640822400&v=beta&t=qGv2yHCjiDl1W8IAgxYKwjlA9xO2IVikEMZ_5aIMtss" alt="image not loaded" class="rounded-circle img-fluid border border-warning" id="my-image" >
+              <img src="1635411479662.jpeg" alt="image not loaded" class="rounded-circle img-fluid border border-warning" id="my-image" >
           </div>
 
           <div class="col-md-7 text-warning pt-2 mar-top ">
